Finish classification part

--- a/Classification/class.bib
+++ b/Classification/class.bib
@@ -53,3 +53,48 @@ month={},}
   year={2013},
   publisher={IEEE}
 }
+
+@ARTICLE{6304904,
+author={G. Moser and S. B. Serpico and J. A. Benediktsson},
+journal={Proceedings of the IEEE},
+title={Land-Cover Mapping by Markov Modeling of Spatial-Contextual Information in Very-High-Resolution Remote Sensing Images},
+year={2013},
+volume={101},
+number={3},
+pages={631-651},
+keywords={Markov processes;geophysical image processing;geophysical techniques;image classification;remote sensing;terrain mapping;ICT field;Markov modeling;Markov random fields;VHR image classification;communication technology;genomic-sequence analysis;image analysis;image-classification process;information technology;land-cover mapping;multidimensional random sequences;natural resource exploitation;random fields;spatial-contextual information;speech processing;stochastic models;very-high-resolution remote sensing images;Computational modeling;Image classification;Image segmentation;Markov processes;Remote sensing;Spatial resolution;Data fusion;Markov models;Markov random fields;land-cover mapping;remote sensing image classification},
+doi={10.1109/JPROC.2012.2211551},
+ISSN={0018-9219},
+month={March},}
+
+@book{Li:2009:MRF:1529944,
+ author = {Li, Stan Z.},
+ title = {Markov Random Field Modeling in Image Analysis},
+ year = {2009},
+ isbn = {9781848002784},
+ edition = {3rd},
+ publisher = {Springer Publishing Company, Incorporated},
+} 
+
+@article{tarabalka2010svm,
+  title={SVM-and MRF-based method for accurate classification of hyperspectral images},
+  author={Tarabalka, Yuliya and Fauvel, Mathieu and Chanussot, Jocelyn and Benediktsson, J{\'o}n Atli},
+  journal={IEEE Geoscience and Remote Sensing Letters},
+  volume={7},
+  number={4},
+  pages={736--740},
+  year={2010},
+  publisher={IEEE}
+}
+@ARTICLE{1576697,
+author={G. Camps-Valls and L. Gomez-Chova and J. Munoz-Mari and J. Vila-Frances and J. Calpe-Maravilla},
+journal={IEEE Geoscience and Remote Sensing Letters},
+title={Composite kernels for hyperspectral image classification},
+year={2006},
+volume={3},
+number={1},
+pages={93-97},
+keywords={geophysical signal processing;geophysical techniques;image classification;image texture;remote sensing;support vector machines;Mercer kernels;composite kernel machines;hyperspectral image classification;image texture;kernel classifiers;spectral information;support vector machine;Computational efficiency;Helium;Hyperspectral imaging;Hyperspectral sensors;Image classification;Kernel;Neural networks;Robustness;Support vector machine classification;Support vector machines;Composite kernels;contextual;hyperspectral;image classification;kernel;spectral;support vector machine (SVM);texture},
+doi={10.1109/LGRS.2005.857031},
+ISSN={1545-598X},
+month={Jan},}
